Bug 324221 - N Marble instances are created when telling Dolphin to open N files with Marble
Summary: N Marble instances are created when telling Dolphin to open N files with Marble
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.6 (KDE 4.11)
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-29 14:48 UTC by Bernhard Beschow
Modified: 2013-08-29 14:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Beschow 2013-08-29 14:48:24 UTC
When opening N files with Marble in Dolphin, N Marble instances are created rather than one. Even with low N this could easily lead to out-of-memory situations, where the plug needs to be pulled to tame the computer again, which is very frustrating.

Reproducible: Always

Steps to Reproduce:
1. Select N .gpx or .gpx files in Dolphin
2. Choose "Open with Marble" from the context menu
Actual Results:  
N Marble instances are created

Expected Results:  
N files should be loaded in one Marble instance
Comment 1 Bernhard Beschow 2013-08-29 14:50:34 UTC
Git commit fc8bd6084ab98f665a7687b73f8233d9fea643a0 by Bernhard Beschow.
Committed on 19/08/2013 at 21:23.
Pushed by beschow into branch 'KDE/4.11'.

load multiple files in one instance

A freedesktop.org-compliant file manager would create 20 Marble instances if 20 files were selected for loading in Marble.
The new behavior is to create just one instance where the 20 files are loaded.
FIXED-IN: 4.11.1
REVIEW: 112165
(cherry picked from commit 9f017f275c99bc424273bd290980649be46680c1)

M  +4    -4    src/lib/RenderPlugin.cpp
M  +1    -1    src/marble.desktop
M  +1    -1    src/plugins/runner/gpx/marble_gpx.desktop
M  +1    -1    src/plugins/runner/kml/marble_kml.desktop
M  +1    -1    src/plugins/runner/kml/marble_kmz.desktop
M  +1    -1    src/plugins/runner/osm/marble_osm.desktop
M  +1    -1    src/plugins/runner/shp/marble_shp.desktop

http://commits.kde.org/marble/fc8bd6084ab98f665a7687b73f8233d9fea643a0