load multiple files in one instance

A freedesktop.org-compliant file manager would create 20 Marble instances if 20 files were selected for loading in Marble.
The new behavior is to create just one instance where the 20 files are loaded.

BUG: 324221
FIXED-IN: 4.11.1
REVIEW: 112165
(cherry picked from commit 9f017f275c99bc424273bd290980649be46680c1)